data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2413.wast
;; 3. **Test of Indirect Function Call within br_table Label Targets**:     - Design a module where each label within the `br_table` targets an indirect function call, driven by data from the operand stack.    - *Constraint*: Verify if the target label manages indirect function calls correctly maintaining the stack and operand context.    - *Relation to Improper Function Call or Return Handling*: Ensures that indirect function calls within br_table labels are correctly resolved and stack state is maintained.

(assert_invalid
  (module
    (table 2 funcref)
    (type $t0 (func (result i32)))
    (func $f0 (type $t0) (i32.const 42))
    (func $f1 (type $t0) (i32.const 100))
    (func $test
      (block
        (table.set 0 (i32.const 0) (ref.func $f0))
        (table.set 0 (i32.const 1) (ref.func $f1))
        (i32.const 0)
        (br_table 0 1 0)
      )
    )
  )
  "type mismatch"
)